added class UserWrapperTest for testing the functionality of converting UserEntity to UserDTO (and vice-versa)